// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderKeyboardInput Snapshots Name 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="slider-keyboard"
      max={100}
      min={0}
      name="slider-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="sc-AxmLO dvfLsp sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi cyrLj"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": NaN,
              "value": NaN,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots No props 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots all 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  onBlur={[Function]}
  value={100}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    <label
      className="sc-AxjAm hjwNwx sc-AxgMl cxJYYh"
      htmlFor="slider-keyboard"
    >
      Label
      
    </label>
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="slider-keyboard"
      max={1000}
      min={0}
      name="slider-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={1000}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots label 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    <label
      className="sc-AxjAm hjwNwx sc-AxgMl cxJYYh"
      htmlFor="undefined-keyboard"
    >
      Label
      
    </label>
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots max 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={1000}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={1000}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots min 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots onBlur 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  onBlur={[Function]}
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots onChange 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots showLabel 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots step 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={0}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots value 1`] = `
<div
  className="sc-fznZeY hRKcZz"
  value={100}
>
  <div
    className="sc-AxheI jmeqRy sc-fzokOt jFjwOo"
  >
    
    
    <input
      autoFocus={null}
      className="sc-Axmtr bDDSAq"
      disabled={false}
      hidden={false}
      id="undefined-keyboard"
      max={100}
      min={0}
      name="undefined-keyboard"
      onBlur={null}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={null}
      placeholder={null}
      style={null}
      type="text"
    />
  </div>
  <div
    className="sc-fzoLsD MHIRH"
  >
    <div
      className="sc-fzpans frZght"
      style={Object {}}
    >
      <div
        className="sc-fzplWN edxNnx"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-AxmLO kLznwU sc-fznyAO ecoJvb"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-fznKkj fyCNGy"
      >
        <div
          className="sc-fzozJi fHalhW"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
